--- a/gsap-demo/src/style.scss
+++ b/gsap-demo/src/style.scss
@@ -73,5 +73,75 @@
         }
       }
     }
+
+    // flip动画效果
+    .flip-box-container {
+      width: 400px;
+      height: 400px;
+      border: 1px solid #000;
+      position: relative;
+      display: grid;
+      // 3*3的网格布局，共有6个子元素，第一个子元素占满2*2的网格
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(3, 1fr);
+      gap: 8px;
+      overflow: hidden;
+
+      .flip-box-item {
+        border: 1px solid #000;
+      }
+
+      .bg1 {
+        background-color: #f00;
+        grid-column: 1 / span 2;
+        grid-row: 1 / span 2;
+      }
+      .bg2 {
+        background-color: #0f0;
+      }
+      .bg3 {
+        background-color: #00f;
+      }
+      .bg4 {
+        background-color: #ff0;
+      }
+      .bg5 {
+        background-color: #0ff;
+      }
+      .bg6 {
+        background-color: #f0f;
+      }
+    }
+
+    // 3d文字滚动
+    .text3d-container {
+      display: flex;
+      color: #fff;
+      font-size: 48px;
+      white-space: nowrap;
+      line-height: 150px;
+      perspective: 1000px;
+
+      .text3d-item-1 {
+        width: 200px;
+        height: 150px;
+        background-color: rgba($color: #000000, $alpha: 0.8);
+        transform: rotateY(320deg);
+        transform-style: preserve-3d;
+        transform-origin: 100% 50%;
+        overflow: hidden;
+      }
+      .text3d-item {
+        width: 200px;
+        height: 150px;
+        background-color: #000;
+        overflow: hidden;
+      }
+
+      .text {
+        display: inline-block;
+        transform: translateX(100%);
+      }
+    }
   }
 }
