--- a/react-demo/src/components/upload/index.module.scss
+++ b/react-demo/src/components/upload/index.module.scss
@@ -21,6 +21,7 @@
 				display: flex;
 				align-items: center;
 				cursor: pointer;
+				position: relative;
 
 				.file-name {
 					white-space: nowrap;
@@ -40,6 +41,18 @@
 
 					&:hover {
 						color: red;
+					}
+				}
+
+				.progress {
+					width: 100%;
+					height: 2px;
+					border-radius: 2px;
+					position: absolute;
+					bottom: 0;
+
+					&.success {
+						background-color: green;
 					}
 				}
 			}
